Support Bluetooth communcation JerryScript debugger
Documentation can be found in 07.DEBUGGER.md

JerryScript-DCO-1.0-Signed-off-by: Bence Gabor Kis kisbg@inf.u-szeged.hu

--- a/docs/07.DEBUGGER.md
+++ b/docs/07.DEBUGGER.md
@@ -9,7 +9,7 @@ This simple application demonstrates the communication protocol
 between the client and server, and can be reused by integrated
 development environments.
 
-## Setting up the debugger server
+## Setting up TCP/IP debugger server
 
 The following arguments must be passed to `tools/build.py`:
 
@@ -21,7 +21,23 @@ JerryScript extension, which transmits messages over TCP/IP networks.
 If necessary/implemented, any reliable stream or datagram based
 protocol can be used for transmitting debugger messages.
 
-## Debugging JavaScript applications
+## Setting up Bluetooth debugger server
+
+The following arguments must be passed to `tools/build.py`:
+
+`--jerry-bt-debugger=on`
+
+The transport layer of the communication protocol is pluggable.
+At the moment, a WebSocket-based implementation is provided as a
+JerryScript extension, which transmits messages over Bluetooth network.
+
+The following library is needed to build JerryScript
+- libbluetooth-dev
+
+The following python commands needed to run jerry-client.py
+- sudo apt-get install -q python-dev
+- pip install --user pylint==1.6.5 pybluez
+
 
 The debugger client must be connected to the server before the
 JavaScript application runs. On-the-fly attachment is supported
@@ -42,6 +58,12 @@ The following argument makes JerryScript wait for a client
 source code:
 
 `--debugger-wait-source`
+
+The following argument makes JerryScript create a server with
+the given type. There are two choices, tcp or bluetooth.
+(default: tcp)
+
+`--server-type bluetooth`
 
 It is also recommended to increase the log level to see
 the *Waiting for client connection* message:
