Maintenance of fatal code enum
- `ERR_SYSCALL` is a legacy that has not been used anymore since
  the removal of jerry-libc. This commit removes it from the port
  API.
- `ERR_DISABLED_BYTE_CODE` is a (relatively) recent addition to the
  fatal code enum. At the time it was added, the documentation has
  not been updated. This commit adds the missing documentation.
  (Plus, it removes a superfluous `JERRY_UNREACHABLE` from after a
  `jerry_fatal (ERR_DISABLED_BYTE_CODE)`.)

Note: As the port API is modified, this is an API-breaking change.

JerryScript-DCO-1.0-Signed-off-by: Akos Kiss akiss@inf.u-szeged.hu

--- a/docs/05.PORT-API.md
+++ b/docs/05.PORT-API.md
@@ -25,8 +25,8 @@ Error codes
 typedef enum
 {
   ERR_OUT_OF_MEMORY = 10,
-  ERR_SYSCALL = 11,
   ERR_REF_COUNT_LIMIT = 12,
+  ERR_DISABLED_BYTE_CODE = 13,
   ERR_FAILED_INTERNAL_ASSERTION = 120
 } jerry_fatal_code_t;
 ```
