--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -1661,7 +1661,7 @@ jerry_value_get_type (const jerry_value_t value);
     ...
   }
 
-  jerry_value_release (number);
+  jerry_release_value (number);
 }
 ```
 
