--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -1630,6 +1630,63 @@ jerry_value_is_undefined (const jerry_value_t value)
 
 - [jerry_release_value](#jerry_release_value)
 
+
+## jerry_strict_equal
+
+**Summary**
+
+Perform strict equality comparison on the given operands.
+
+**Prototype**
+
+```c
+jerry_value_t jerry_strict_equal (const jerry_value_t lhs, const jerry_value_t rhs);
+```
+
+- `lhs` - left-hand side operand
+- `rhs` - right-hand side operand
+- return value
+  - error, if argument has an error flag
+  - true, if the two operands are strictly equal
+  - false, otherwise
+
+**Example**
+
+```c
+{
+  jerry_value_t value1;
+  jerry_value_t value2;
+  ... // create or acquire value
+
+  jerry_value_t result = jerry_strict_equal (value1, value2)
+
+  if (!jerry_value_is_error (result))
+  {
+    if (jerry_get_boolean_value (result))
+    {
+       // value1 and value2 are equal
+    }
+    else
+    {
+      // value1 and value2 are NOT equal
+    }
+  }
+  else
+  {
+    ... // handle error
+  }
+
+  jerry_release_value (value1);
+  jerry_release_value (value2);
+  jerry_release_value (result);
+}
+```
+
+**See also**
+
+- [jerry_value_t](#jerry_value_t)
+
+
 ## jerry_value_get_type
 
 **Summary**
