Part I: Implement ES2015 module system.
JerryScript-DCO-1.0-Signed-off-by: Daniel Vince vinced@inf.u-szeged.hu

--- a/docs/05.PORT-API.md
+++ b/docs/05.PORT-API.md
@@ -83,6 +83,32 @@ information.
 void jerry_port_print_char (char c);
 ```
 
+### ES2015 Module system helper functions
+
+The import statement requires two specific functions for opening and closing files (the modules) port specific.
+
+```c
+/**
+ * Opens file with the given path and reads its source.
+ * @return the source of the file
+ */
+uint8_t *
+jerry_port_read_source (const char *file_name_p, /**< file name */
+                        size_t *out_size_p) /**< [out] read bytes */
+{
+  // open file from given path
+  // return its source
+} /* jerry_port_read_source */
+
+/**
+ * Release the previously opened file's content.
+ */
+void
+jerry_port_release_source (uint8_t *buffer_p) /**< buffer to free */
+{
+  free (buffer_p);
+} /* jerry_port_release_source */
+```
 
 ## Date
 
