Make jerryx_port_handler_print_char truly a port function
In the previous approach `jerryx_port_handler_print_char` was implemented
in by the jerry-default-port. This implementation however required the
jerry-ext handler header file which created a requirement in the
jerry-default-port for the jerry-ext headers.

JerryScript-DCO-1.0-Signed-off-by: Peter Gal pgal.u-szeged@partner.samsung.com

--- a/docs/05.PORT-API.md
+++ b/docs/05.PORT-API.md
@@ -72,6 +72,18 @@ typedef enum
 void jerry_port_log (jerry_log_level_t level, const char *fmt, ...);
 ```
 
+The `jerry_port_print_char` is currenlty not used by the jerry-core directly.
+However, it provides a port specifc way for `jerry-ext` components to print
+information.
+
+```c
+/**
+ * Print a character to stdout.
+ */
+void jerry_port_print_char (char c);
+```
+
+
 ## Date
 
 ```c
@@ -199,6 +211,17 @@ jerry_port_log (jerry_log_level_t level, /**< log level */
   vfprintf (stderr, format, args);
   va_end (args);
 } /* jerry_port_log */
+```
+
+```c
+/**
+ * Print a character to stdout with putchar.
+ */
+void
+jerry_port_print_char (char c)
+{
+  putchar (c);
+} /* jerr_port_print_char */
 ```
 
 ## Date
