--- a/docs/07.DEBUGGER.md
+++ b/docs/07.DEBUGGER.md
@@ -68,9 +68,11 @@ When using the extension-provided WebSocket transport layer, the
 debugger can be enabled by calling `jerryx_debugger_after_connect
 (jerryx_debugger_tcp_create (debug_port) && jerryx_debugger_ws_create ())`
 after the `jerry_init ()` function. It initializes the debugger and
-blocks until a client connects. (Custom transport layers may be
-implemented and initialized similarly. Currently, `jerryx_debugger_rp_create()` for
-raw packet transport layer is also available.)
+blocks until a client connects.
+(Custom transport layers may be implemented and initialized similarly.
+Currently, `jerryx_debugger_rp_create ()` for raw packet transport layer and
+`jerryx_debugger_serial_create (const char* config)` for serial protocol
+are also available.)
 
 The resource name provided to `jerry_parse ()` is used by the client
 to identify the resource name of the source code. This resource name
