Fix typo in the API documentation
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -1384,7 +1384,7 @@ Returns whether the given `jerry_value_t` is a number.
 
 ```c
 bool
-jerry_value_is_function (const jerry_value_t value)
+jerry_value_is_number (const jerry_value_t value)
 ```
 
 - `value` - api value
