Rework usages/naming of configuration macros [part 2]
There are quite a few configuration macros in the project.
As discussed in the #2520 issue there are a few awkward constructs.

Main changes:

* The following macros are now 0/1 switches:
** Renamed CONFIG_ECMA_LCACHE_DISABLE to JERRY_LCACHE.
** Renamed CONFIG_ECMA_PROPERTY_HASHMAP_DISABLE to JERRY_PROPERTY_HASHMAP.
** Renamed CONFIG_DISABLE_UNICODE_CASE_CONVERSION to JERRY_UNICODE_CASE_CONVERSION.
** Renamed ENABLE_REGEXP_STRICT_MODE to JERRY_REGEXP_STRICT_MODE.
** Renamed JERRY_DISABLE_JS_PARSER to JERRY_PARSER.
** Renamed JERRY_ENABLE_ERROR_MESSAGES to JERRY_ERROR_MESSAGES.
** Renamed JERRY_ENABLE_EXTERNAL_CONTEXT to JERRY_EXTERNAL_CONTEXT.
** Renamed JERRY_ENABLE_LINE_INFO to JERRY_LINE_INFO.
** Renamed JERRY_ENABLE_LOGGING to JERRY_LOGGING.
** Renamed JERRY_ENABLE_SNAPSHOT_EXEC to JERRY_SNAPSHOT_EXEC.
** Renamed JERRY_ENABLE_SNAPSHOT_SAVE to JERRY_SNAPSHOT_SAVE.
** Renamed JERRY_SYSTEM_ALLOCATOR to JERRY_SYSTEM_ALLOCATOR.
** Renamed JERRY_VM_EXEC_STOP to JERRY_VM_EXEC_STOP.
** Renamed JMEM_GC_BEFORE_EACH_ALLOC to JERRY_MEM_GC_BEFORE_EACH_ALLOC.
** Renamed JMEM_STATS to JERRY_MEM_STATS.
** Renamed PARSER_DUMP_BYTE_CODE to JERRY_PARSER_DUMP_BYTE_CODE.
** Renamed REGEXP_DUMP_BYTE_CODE to JERRY_REGEXP_DUMP_BYTE_CODE.
* Recursion check changes:
** Renamed REGEXP_RECURSION_LIMIT to JERRY_REGEXP_RECURSION_LIMIT.
** Renamed VM_RECURSION_LIMIT to JERRY_VM_RECURSION_LIMIT.
* Attribute macro changes:
** Renamed JERRY_CONST_DATA to JERRY_ATTR_CONST_DATA.
** Renamed JERRY_HEAP_SECTION_ATTR to JERRY_ATTR_GLOBAL_HEAP.
  Now the macro can specify any attribute for the global heap object.
* Other macro changes:
** Renamed CONFIG_MEM_HEAP_AREA_SIZE to JERRY_GLOBAL_HEAP_SIZE.
   Then new macro now specify the global heap size in kilobytes.
* Updated documentations to reflect the new macro names.

For more deatils please see jerry-core/config.h.

JerryScript-DCO-1.0-Signed-off-by: Peter Gal pgal.u-szeged@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -5763,7 +5763,7 @@ jerry_generate_snapshot (const jerry_char_t *resource_name_p,
 - return value
   - the size of the generated snapshot in bytes as number value, if it was generated succesfully (i.e. there
     are no syntax errors in source code, buffer size is sufficient, and snapshot support is enabled in
-    current configuration through JERRY_ENABLE_SNAPSHOT_SAVE)
+    current configuration through JERRY_SNAPSHOT_SAVE)
   - thrown error, otherwise.
 
 **Example**
@@ -5845,7 +5845,7 @@ jerry_generate_function_snapshot (const jerry_char_t *resource_name_p,
 - return value
   - the size of the generated snapshot in bytes as number value, if it was generated succesfully (i.e. there
     are no syntax errors in source code, buffer size is sufficient, and snapshot support is enabled in
-    current configuration through JERRY_ENABLE_SNAPSHOT_SAVE)
+    current configuration through JERRY_SNAPSHOT_SAVE)
   - thrown error, otherwise.
 
 **Example**
@@ -6085,7 +6085,7 @@ jerry_get_literals_from_snapshot (const uint32_t *snapshot_p,
 - `is_c_format` - the output format would be C-style (true) or a simple list (false).
 - return value
   - the size of the literal-list, if it was generated succesfully (i.e. the list of literals isn't empty,
-    and literal-save support is enabled in current configuration through JERRY_ENABLE_SNAPSHOT_SAVE)
+    and literal-save support is enabled in current configuration through JERRY_SNAPSHOT_SAVE)
   - 0 otherwise.
 
 **Example**
