--- a/docs/05.PORT-API.md
+++ b/docs/05.PORT-API.md
@@ -65,8 +65,8 @@ typedef enum
  * vfprintf(logfile), or both, depending on log level.
  *
  * Note:
- *      This port function is called by jerry-core when JERRY_ENABLE_LOGGING is
- *      defined. It is also common practice though to use this function in
+ *      This port function is called by jerry-core when JERRY_LOGGING is
+ *      enabled. It is also common practice though to use this function in
  *      application code.
  */
 void jerry_port_log (jerry_log_level_t level, const char *fmt, ...);
@@ -145,7 +145,7 @@ jerry_port_normalize_path (const char *in_path_p, /**< input file path */
  *
  * Note:
  *      This port function is called by jerry-core when
- *      CONFIG_DISABLE_DATE_BUILTIN is _not_ defined. Otherwise this function is
+ *      JERRY_BUILTIN_DATE is set to 1. Otherwise this function is
  *      not used.
  *
  * @param unix_ms The unix timestamp we want an offset for, given in
@@ -167,7 +167,7 @@ double jerry_port_get_local_time_zone_adjustment (double unix_ms, bool is_utc);
  *
  * Note:
  *      This port function is called by jerry-core when
- *      CONFIG_DISABLE_DATE_BUILTIN is _not_ defined. It is also common practice
+ *      JERRY_BUILTIN_DATE is set to 1. It is also common practice
  *      in application code to use this function for the initialization of the
  *      random number generator.
  *
@@ -189,7 +189,7 @@ simultaneously.
  *
  * Note:
  *      This port function is called by jerry-core when
- *      JERRY_ENABLE_EXTERNAL_CONTEXT is defined. Otherwise this function is not
+ *      JERRY_EXTERNAL_CONTEXT is enabled. Otherwise this function is not
  *      used.
  *
  * @return the pointer to the engine context.
